plugins {
    id 'java-library'
    id 'idea'
    id "com.gradleup.shadow" version "8.3.5"
}

group = 'com.magmaguy'
version = '2.1.2'

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        name = 'spigotmc-repo'
        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
    }
    maven { url = 'https://repo.magmaguy.com/releases' }
    maven { url = "https://repo.magmaguy.com/snapshots" }
    maven { url = 'https://repo.codemc.org/repository/maven-public' }
    maven { url = 'https://maven.enginehub.org/repo/' }
    maven { url = 'https://nexus.phoenixdevt.fr/repository/maven-public/' }
}

dependencies {
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    compileOnly 'org.projectlombok:lombok:1.18.30'

    implementation (group: 'com.magmaguy', name: 'MagmaCore', version: '1.19-SNAPSHOT'){
        changing = true
    }
    implementation 'org.apache.commons:commons-lang3:3.9'
    implementation group: 'org.reflections', name: 'reflections', version: '0.10.2'
    implementation group: 'org.joml', name: 'joml', version: '1.10.8'
    compileOnly group: 'com.sk89q.worldedit', name: 'worldedit-bukkit', version: '7.3.0'
    compileOnly 'org.spigotmc:spigot-api:1.21.3-R0.1-SNAPSHOT'
}

//This allows any modules tagged as changing to be updated every time, which is extremely convenient for some of the shaded libs
configurations.all {
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
}

artifacts { // task 'build' runs generates uberjar
    archives shadowJar
}

jar {
    archiveClassifier.set('min') // we want the Uberjar to be distributed, this is the minified version
}

// Relocating a Package
shadowJar {
    archiveClassifier.set(null)
    archiveFileName.set(project.name + ".jar")
    destinationDirectory.set(new File("testbed/plugins"))
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

ext {
    resourceTokens = [
            'Version': version
    ]
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21) // or your target version
    }
}

processResources {
    filter org.apache.tools.ant.filters.ReplaceTokens, tokens: resourceTokens
}